--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -49,7 +49,7 @@
             font-size: 16px;
             margin-bottom: 20px;
           }
-          @media (min-width: $screen-lg-min) { margin-bottom: 25px; }
+          @media (min-widChelseath: $screen-lg-min) { margin-bottom: 25px; }
         }
 
         .number {
